# Ants

./: CMakeLists.txt  README.md  charges  main.c  pso.c  pso.h  wbo  xtbrestart  xtbtopo.mol
calc_energy/: a.out  calc_energy.c  calc_energy.h  gradient_decent.R  test_xtb_c_api.c
convert/: Cy.xyz  convert.c  convert.h  expected.xyz  input.zmat  test_convert.c  zmat2xyz.c  zmatrix_Cy.zmat  zmattoxyz.py
development/: mol.zmat  output.mol  scanning.R  test.py  xyztoz.py  zmat2cartesian.f90  zmatpr.f90  zmatrix_mol.zmat  zmatrix_mol2.zmat  zmatrix_mol2_reconstructed.xyz  zmatrix_mol_reconstructed.xyz  zmattoxyz.py
development/xtb_python/: loss_fct.py
development/xyz2z2xyz/1/: a.out  input.xyz  output.zmat
development/xyz2z2xyz/2/: input.xyz  output_reconstructed.xyz  xyz2zmat  xyz2zmat.f90  zmat2xyz  zmat2xyz.f90
linear_alg/: blas_utils.c
notes/: plan.md
optim/: gradient_descent.c  gradient_descent.h  pso.c  pso.h  pso_tests.c  utils.h
pso/: pso.c  pso.h  tests.c
random/: mersenne_twister.c  mersenne_twister.h
test_files/: water.zmat
utils/: utils.c  utils.h
xtb/: calc_energy.c  calc_energy.h
xtb_python/: atom_identifier.py  pso.py
